--- a/apps/store/src/app/globals.css
+++ b/apps/store/src/app/globals.css
@@ -19,3 +19,9 @@ body {
   background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
 }
+
+@layer utilities{
+  .semi-head{
+    @apply uppercase font-semibold text-primary-darbar;
+  }
+}
