add_to_cart,checkout

--- a/apps/store/src/app/globals.css
+++ b/apps/store/src/app/globals.css
@@ -14,6 +14,13 @@
   }
 }
 
+th{
+  @apply p-4 bg-primary-brown text-primary-darbar text-lg uppercase;
+}
+td{
+  @apply p-4 bg-white text-sm;
+}
+
 body {
   color: var(--foreground);
   background: var(--background);
